# cc-trusted-vmsdk

./: .gitignore  README.md  setupenv.sh
.github/: cspell.json
.github/workflows/: pr-check-rust.yaml  publish-pypi-packages.yaml  pylicense.yaml  pylint.yaml  vmsdk-test-python.yaml  vmsdk-test-rust.yaml  vmsdk-test-rust.yml
src/: README.md
src/cvm-image-rewriter/: README.md  qemu-test.sh  tdx-libvirt-ubuntu-host.xml.template  virt-test.sh
src/golang/: README.md
src/golang/cctrusted_vm/: cvm.go  go.mod  go.sum
src/golang/cctrusted_vm/cmd/: Makefile  main.go
src/golang/cctrusted_vm/cmd/app/: cvm.go  eventlog.go  imr.go  report.go  root.go
src/golang/cctrusted_vm/sdk/: sdk.go  sdk_test.go
src/golang/cctrusted_vm/tdx/: cvm.go  device.go  device_test.go  event_recorder.go  event_recorder_test.go  quote_handler.go
src/pytdxmeasure/pytdxmeasure/: tdreport.py
src/python/: README.md  cc_event_log_cli.py  cc_imr_cli.py  cc_quote_cli.py  pyproject.toml  requirements.txt  td_report_cli.py
src/python/cctrusted_vm/: __init__.py  cvm.py  sdk.py  tdx.py
src/python/tests/: conftest.py  tdx_check.py  test_sdk.py
src/rust/: README.md
src/rust/cctrusted_vm/: Cargo.toml
src/rust/cctrusted_vm/src/: cvm.rs  sdk.rs  tdvm.rs
src/rust/sample/: Cargo.toml
src/rust/sample/src/: cc-sample-eventlog.rs  cc-sample-measurement.rs  cc-sample-quote.rs
