[project]
name = "cctrusted_vm"
version = "0.5.0"
authors = [
  { name="Lu, Ken", email="ken.lu@intel.com" },
  { name="Zhang, Wenhui", email="wenhui.zhang@bytedance.com" },
]
description = "Evidence API VM SDK"
readme = "README.md"
license = { text="Apache Software License" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
  "evidence_api",
  "pytest",
]

[project.urls]
"Homepage" = "https://github.com/cc-api/cc-trusted-vmsdk"
"Bug Tracker" = "https://github.com/cc-api/cc-trusted-vmsdk/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where=["."]
include=["cctrusted_vm*"]
