[package]
name = "cctrusted_vm"
version = "0.4.0"
edition = "2021"
authors = ["Chen Hairong <hairong.chen@intel.com>", "Lu Ken <ken.lu@intel.com>"]
repository = "https://github.com/cc-api/cc-trusted-api"
description = "CC Trusted API VM SDK"
license = "Apache-2.0"

[lib]
name = "cctrusted_vm"
path = "src/lib.rs"

[dependencies]
cctrusted_base = { git = "https://github.com/cc-api/cc-trusted-api.git", branch = "main" }
anyhow = "1.0"
log = "0.4.20"
nix = "0.26.2"
base64 = "0.13.0"
rand = "0.8.5"
sha2 = "0.10"
tempfile = "3.0"
vsock = "0.4.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
